tests/rosetta/out/Fortran/bitwise-io-1.error
parse: error[P040]: /workspace/mochi/tests/rosetta/x/Mochi/bitwise-io-1.mochi:7:26: lexer: invalid input text "; i = i + 1 }\n  ..."
  --> /workspace/mochi/tests/rosetta/x/Mochi/bitwise-io-1.mochi:7:26

  7 |   while i < n { v = v * 2; i = i + 1 }
    |                          ^

help:
  String literals must be properly closed with a `"`.